                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2016-08-29
 * Switched to our own markdown parser for better security, speed, and formatting.

2016-08-25
 * Added better precheck for unique fields to check for unique indexes as well as unique qualifiers. 
 * Added in page targets to Web Filtered Fields.

2016-08-22
 * Requires Text::MultiMarkdown and URI::Find::Delimited.
 * Allow for Markdown in Web Filtered Fields.
 * ContentFilter now uses ## instead of == for headings. Use something like this to upgrade your database: 

    update groups set description=replace(description, '==','##');


2016-08-18
 * Add a login link to 401 ajax error messages.

2016-08-08
 * Export "can_view" property via describe() method in Result.pm

2016-08-02
 * Fixed a bug in Wing::ContentFilter where it couldn't get SSL sites.

2016-07-18
 * Added filter to Wing::Role::Result::Field.

2016-07-11
 * Disambiguate a Rest _order_by clause.
 * By default content filter allows for H2 through H6.

2016-07-06
 * Allow qualifiers in Rest generate_relationship to be passed a comparison operator. 
 * wing.angular.js objectListManager on_each is now passed the objectManager instance of each object in addition to its properties.

2016-06-30
 * Updated the Facebook SSO API to work with Facebook's nonsense.
 * Exposed FacebookAuthUser role so you know what fields you have to add to auth with Facebook.
 * NOTE: You need to copy var/init/views/account/create_account_include.tt finish_facebook.tt, and authenticate_include.tt into your views/account folder.

2016-06-29
 * Added a describe_delete method.

2016-06-24
 * Replaced 451 error codes with the HTTP standard 401.

2016-06-22