@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2016-10-04
+ * Allow joined queries on Rest generate_relationship().
+
 2016-08-29
  * Switched to our own markdown parser for better security, speed, and formatting.
 
